# vasttrafik-cli

./: Cargo.toml  README.md
src/: api.rs  main.rs  print_helpers.rs
src/api/: endpoints.rs  types.rs
src/api/endpoints/: location_name.rs  trip.rs
