[package]
name = "vasttrafik-cli"
version = "0.1.0"
authors = ["Hugo Simonsson <simonssonhugo13@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = {version = "0.11.14", features = ["blocking", "json"] }
base64 = "0.21.0"
hex = "0.4.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde-aux = "4.1.2"
serde-this-or-that = "0.4.2"

colored = "2.0.0"

clap = {version = "4.1.8", features = ["derive"] }
clap-verbosity-flag = "2.0.0"

log = "0.4.17"
env_logger = "0.10.0"